# geant4_example

./: .gitignore  CMakeLists.txt  README.md  init_vis.mac  main.cc  run.mac  run_mt.mac
executable/: G4History.macro  basicTest  launch.sh  run_mt.mac
include/: ActionInitialization.hh  DetectorConstruction.hh  EventAction.hh  PhysicsList.hh  PrimaryGeneratorAction.hh  ScintillatorSD.hh  SteppingAction.hh
src/: ActionInitialization.cc  DetectorConstruction.cc  EventAction.cc  PhysicsList.cc  PrimaryGeneratorAction.cc  ScintillatorSD.cc  SteppingAction.cc
